--- a/src/components/CostPrint/CostPrint.module.css
+++ b/src/components/CostPrint/CostPrint.module.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: var(--secondary-font);
+    font-family: var(--cairo);
     font-size:var(--font-md);
     background-color: var(--main-color);
     color:white;
