--- a/src/components/InvoiceList/InvoiceList.module.css
+++ b/src/components/InvoiceList/InvoiceList.module.css
@@ -82,7 +82,7 @@
     font-family: var(--cairo);
     color:var(--main-dark);
     font-size:var(--font-md);
-    font-weight: var(--font-light);
+    font-weight: var(--font-medium);
     padding-left: var(--pad-sm);
     padding-bottom:var(--pad-xs);
 }
@@ -90,9 +90,9 @@
 .nameActive{
     grid-area: name;
     font-family: var(--cairo);
-    color:var(--main-dark);
+    color:var(--orange);
     font-size:var(--font-xl);
-    font-weight: var(--font-light);
+    font-weight: var(--font-medium);
     padding-left: var(--pad-sm);
     padding-bottom:var(--pad-xs);
 }
@@ -157,10 +157,10 @@
     height: 50px;
     width: 100%;
     padding:var(--pad-md);
-    color:var(--orange);
+    color:var(--main-dark);
     border-top:dashed gray 1px;
 }
 
 .actionLink{
-    color:var(--orange);
+    color:var(--main-dark);
 }
